[gd_scene load_steps=6 format=3 uid="uid://dsduhwe8hqs8a"]

[ext_resource type="Script" path="res://ClientLobby/lobby.gd" id="1_yefr8"]
[ext_resource type="PackedScene" uid="uid://t43uc074fdn3" path="res://Server/server.tscn" id="2_1eupl"]
[ext_resource type="Script" path="res://ClientLobby/ServerBrowser.gd" id="3_pun1n"]
[ext_resource type="PackedScene" uid="uid://d1kmysrxcbgop" path="res://ClientLobby/server_info.tscn" id="4_bgcuu"]
[ext_resource type="Script" path="res://ClientLobby/WaitingRoom.gd" id="5_i4xtc"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1.52588e-05
offset_top = -24.0
offset_right = 1.52588e-05
offset_bottom = -22.808
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.914334, 0.999576)
script = ExtResource("1_yefr8")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.372549, 0.309804, 0.0313726, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -335.0
offset_top = -77.5
offset_right = -22.9999
offset_bottom = 124.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="LobbyLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Lobby"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="NameLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Player Name: "

[node name="NameEdit" type="LineEdit" parent="CenterContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "Enter Name"
alignment = 1

[node name="IPLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "IP Address:"

[node name="IPEdit" type="LineEdit" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "127.0.0.1"
placeholder_text = "Enter IP Address"
alignment = 1

[node name="PortLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Port: "

[node name="PortEdit" type="LineEdit" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "3296"
placeholder_text = "Enter Port Number"
alignment = 1

[node name="JoinBtn" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Join Game"

[node name="StartGameBtn" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="Server" parent="CenterContainer/VBoxContainer" instance=ExtResource("2_1eupl")]
layout_mode = 2

[node name="HostGame" parent="CenterContainer/VBoxContainer/Server" index="0"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -77.0
offset_top = 5.0
offset_right = 77.0
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 0

[node name="ServerBrowser" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.508
anchor_top = 0.5
anchor_right = 0.508
anchor_bottom = 0.5
offset_left = -27.304
offset_top = -83.5
offset_right = 43.696
offset_bottom = -15.5
script = ExtResource("3_pun1n")
serverInfo = ExtResource("4_bgcuu")

[node name="BroadcastTimer" type="Timer" parent="ServerBrowser"]

[node name="ListenPortLabel" type="Label" parent="ServerBrowser"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = -4.126
anchor_right = 0.5
anchor_bottom = -4.126
offset_left = -112.5
offset_top = 251.568
offset_right = 24.5
offset_bottom = 274.568
grow_horizontal = 2
grow_vertical = 2
text = "Listening to port: "

[node name="Panel" type="Panel" parent="ServerBrowser"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = -4.206
anchor_right = 0.5
anchor_bottom = -4.206
offset_left = -31.588
offset_top = 300.321
offset_right = 338.412
offset_bottom = 540.321

[node name="ServerInfoTitle" type="HBoxContainer" parent="ServerBrowser/Panel"]
layout_mode = 0
offset_right = 367.0
offset_bottom = 31.0

[node name="NameTitle" type="Label" parent="ServerBrowser/Panel/ServerInfoTitle"]
layout_mode = 2
size_flags_horizontal = 3
text = "Server
"
horizontal_alignment = 1

[node name="IPTitle" type="Label" parent="ServerBrowser/Panel/ServerInfoTitle"]
layout_mode = 2
size_flags_horizontal = 3
text = "IP address"
horizontal_alignment = 1

[node name="PlayerCountTitle" type="Label" parent="ServerBrowser/Panel/ServerInfoTitle"]
layout_mode = 2
size_flags_horizontal = 3
text = "#Players"
horizontal_alignment = 1

[node name="JoinTitle" type="Label" parent="ServerBrowser/Panel/ServerInfoTitle"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ServerBrowser/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.094
offset_left = 0.0880127
offset_top = 36.687
offset_right = 0.0880127
offset_bottom = 14.127
grow_horizontal = 2

[node name="WaitingRoom" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -2.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_i4xtc")

[node name="UserIDLabel" type="Label" parent="WaitingRoom"]
layout_mode = 0
offset_left = 893.0
offset_top = 403.0
offset_right = 959.0
offset_bottom = 426.0
text = "User ID: "

[node name="Panel" type="Panel" parent="WaitingRoom"]
layout_mode = 0
offset_left = 882.0
offset_top = 431.0
offset_right = 1236.0
offset_bottom = 639.0

[node name="VBoxContainer" type="VBoxContainer" parent="WaitingRoom/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="WaitingRoomLabel" type="Label" parent="WaitingRoom/Panel/VBoxContainer"]
layout_mode = 2
text = "=====Waiting Room====="
horizontal_alignment = 1

[node name="player_list" type="VBoxContainer" parent="WaitingRoom/Panel/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="WaitingRoom"]
layout_mode = 0
offset_left = 882.0
offset_top = 682.0
offset_right = 1241.0
offset_bottom = 764.0

[node name="StartGameBtn" type="Button" parent="WaitingRoom/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="ExitRoomBtn" type="Button" parent="WaitingRoom/VBoxContainer"]
layout_mode = 2
text = "Exit Room"

[node name="CancelHostBtn" type="Button" parent="WaitingRoom/VBoxContainer"]
layout_mode = 2
text = "Cancel Hosting Session"

[connection signal="pressed" from="CenterContainer/VBoxContainer/JoinBtn" to="." method="_on_join_btn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/StartGameBtn" to="." method="_on_start_game_btn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Server/HostGame" to="." method="_on_host_game_pressed"]
[connection signal="timeout" from="ServerBrowser/BroadcastTimer" to="ServerBrowser" method="_on_broadcast_timer_timeout"]
[connection signal="pressed" from="WaitingRoom/VBoxContainer/StartGameBtn" to="." method="_on_start_game_btn_pressed"]
[connection signal="pressed" from="WaitingRoom/VBoxContainer/ExitRoomBtn" to="WaitingRoom" method="_on_exit_room_btn_pressed"]

[editable path="CenterContainer/VBoxContainer/Server"]
